--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -1,13 +1,22 @@
 <!--index.wxml-->
-<view class="container">
-  <view class="userinfo">
-    <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
-    <block wx:else>
-      <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" mode="cover"></image>
-      <text class="userinfo-nickname">{{userInfo.nickName}}</text>
-    </block>
+<view class="page-tabbar">
+  <view class="tabbar-main">
+    <tabbar-index style="{{ tabbarIndex === 0 ? 'display: block;' : 'display: none;' }}" />
+    <tabbar-classification style="{{ tabbarIndex === 1 ? 'display: block;' : 'display: none;' }}" />
+    <tabbar-ranking style="{{ tabbarIndex === 2 ? 'display: block;' : 'display: none;' }}" />
+    <tabbar-cart style="{{ tabbarIndex === 3 ? 'display: block;' : 'display: none;' }}" />
+    <tabbar-user style="{{ tabbarIndex === 4 ? 'display: block;' : 'display: none;' }}" />
   </view>
-  <view class="usermotto">
-    <text class="user-motto">{{motto}}</text>
+  <view class="tabbar-foot">
+    <view
+      wx:for="{{ tabbar }}"
+      wx:key="index"
+      class="tabbar-item"
+      data-id="{{ index }}"
+      bind:tap="switchTabbar"
+    >
+      <image class="tabbar-icon" src="{{ tabbarIndex === index ? item.iconPath : item.selectedIconPath }}" />
+      <text class="tabbar-text">{{ item.text }}</text>
+    </view>
   </view>
 </view>
