--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -1,21 +1,36 @@
 /**index.wxss**/
-.userinfo {
+.page-tabbar .tabbar-main {
+  color: #fff;
+  background: blue;
+}
+
+
+.page-tabbar .tabbar-foot {
   display: flex;
+  flex-direction: row;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: red;
+}
+
+.page-tabbar .tabbar-item {
+  display: flex;
+  flex: 1;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
+  padding: 6px 0;
 }
 
-.userinfo-avatar {
-  width: 128rpx;
-  height: 128rpx;
-  margin: 20rpx;
-  border-radius: 50%;
+.page-tabbar .tabbar-item .tabbar-icon {
+  width: 20px;
+  height: 20px;
+  background: #fff;
 }
 
-.userinfo-nickname {
-  color: #aaa;
-}
-
-.usermotto {
-  margin-top: 200px;
+.page-tabbar .tabbar-item .tabbar-text {
+  margin-top: 6px;
+  font-size: 12px;
 }
